Updated pages and added functional zoom search engine

--- a/Discounts/Adventure.html
+++ b/Discounts/Adventure.html
@@ -8,13 +8,6 @@
 <body>
 <div class="title">
 <img src ="../Pictures/Logo.png"></img>
-<h1>Adventure books discounts</h1>
-</div>
-<div class="search">
-	<form action="main.html/search.php">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
 </div>
 <div id='cssmenu'>
         <div class="dropdown">
@@ -40,12 +33,15 @@
                 <a href="Technology.html">Tehnology discount</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+        </div>
     
 </div>
 
 
 <div id='main' class="main body" >
-    <h1>Adventure</h1>
+    <h1>Adventure books discounts</h1>
     <div class="carousel active">
         <ul>
             <li class="vsep">
@@ -54,7 +50,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="The Nightingale" style="width: 150px">The Nightinglae</a>
+                        <a href="https://www.amazon.com/Nightingale-Novel-Kristin-Hannah/dp/1250080401" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">The Nightingale</p>
                         <p>Kristin Hannah</p>
                     </div>
                     <div class="discount"><span>-10%</span></div>
@@ -66,7 +63,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
+                            <a href="https://www.amazon.com/Alices-Adventures-Wonderland-Thrift-Editions/dp/0486275434" title="Buy here" style="width: 150px">Buy here</a>
+                            <p class="name">Alice's adventure in wonderland</p>
                             <p>Lewis Carroll</p>                    
                         </div>
                         <div class="discount"><span>-20%</span></div>
@@ -79,7 +77,8 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
+                            <a href="https://www.amazon.com/All-Quiet-Western-Front-Novel/dp/0449213943" title="Buy here" style="width: 150px">Buy here</a>
+                            <p class="name">All quiet on the western front</p>
                             <p>Maria Remarque</p>
                         </div>
                         <div class="discount"><span>-15%</span></div>
@@ -92,7 +91,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Anne of green gables" style="width: 150px">Anne of green gables</a>
+                        <a href="https://www.amazon.com/Anne-Green-Gables-Shirley-ebook/dp/B0167DZ2LU" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">Anne of green gables</p>
                         <p>Lucy Maud Montgomery</p>
                     </div>
                     <div class="discount"><span>-18%</span></div>
@@ -105,7 +105,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Gulliver's travels" style="width: 150px">Gulliver's travels</a>
+                        <a href="https://www.amazon.com/Gullivers-Travels-Dover-Thrift-Editions/dp/0486292738" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">Gulliver's travels</p>
                         <p>Jonathan Swift</p>
                     </div>
                     <div class="discount"><span>-20%</span></div>
@@ -118,7 +119,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Kigdon of copper" style="width: 150px">Kingdon of copper</a>
+                        <a href="https://www.amazon.com/Kingdom-Copper-Novel-Daevabad-Trilogy/dp/0062678132" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">Kingdom of copper</p>
                         <p> S.A. Chakraborty</p>
                     </div>
                     <div class="discount"><span>-10%</span></div>
@@ -131,7 +133,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="The secret garden" style="width: 150px">The secret garden</a>
+                        <a href="https://www.amazon.com/Secret-Garden-Frances-Hodgson-Burnett/dp/0451528832" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">The secret garden</p>
                         <p>Francess Burnett</p>
                     </div>
                     <div class="discount"><span>-10%</span></div>
@@ -144,7 +147,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Twelfth night" style="width: 150px">Twelfth night</a>
+                        <a href="https://www.amazon.com/Twelfth-Night-Dover-Thrift-Editions/dp/0486292908" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">Twelfth night</p>
                         <p>William Shakespeare</p>
                     </div>
                     <div class="discount"><span>-15%</span></div>
@@ -157,7 +161,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="War of the wolf" style="width: 150px">War of the wolf</a>
+                        <a href="https://www.amazon.com/War-Wolf-Novel-Saxon-Tales/dp/0062563173" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">War of the wolf</p>
                         <p>Bernard Cornwell</p>
                     </div>
                     <div class="discount"><span>-16%</span></div>
@@ -170,7 +175,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="World without end" style="width: 150px">World without end</a>
+                        <a href="https://www.amazon.com/World-Without-End-Ken-Follett/dp/033045692X" title="Buy here" style="width: 150px">Buy here</a>
+                        <p class="name">World without end</p>
                         <p>Ken Follett</p>
                     </div>
                     <div class="discount"><span>-18%</span></div>
