--- a/Discounts/Fiction.html
+++ b/Discounts/Fiction.html
@@ -8,13 +8,6 @@
 <body>
 <div class="title">
 <img src ="../Pictures/Logo.png"></img>
-<h1>Fiction books discounts</h1>
-</div>
-<div class="search">
-	<form action="main.html/search.php">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
 </div>
 <div id='cssmenu'>
         <div class="dropdown">
@@ -40,6 +33,12 @@
                 <a href="Technology.html">Tehnology discount</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+        </div>
     
+</div>
+<div id='main' class="main body" >
+    <h1>Fiction books discounts</h1>
 </div>
     
