--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,6 @@
 <div class="title">
 <img src ="Pictures/Logo.png"></img>
 </div>
-<div class="search">
-		<form action="main.html/search.php">
-			<input type="search" name="search" placeholder="Enter keyword" />
-			<input type ="submit" value="Search" />
-		</form>
-	</div>
 <div id='cssmenu'>
 	<div class="dropdown">
 			<button class='dropbtn'><a href='index.html'>Home</a></button>
@@ -42,9 +36,13 @@
 	</div>
 	<div class="dropdown">
 		<button class='dropbtn'><a href='search.html'>Search this site</a></button>
+	</div>
+<div>
+<p id="description">This site is intended to give you a quick preview of top selling books at the moment along with good prices and even discounts on partner sites</p>
 </div>
-<p>This site is intended to give you a quick preview of top selling books at the moment along with good prices and even discounts on partner sites</p>  
 
+<div>        
+	<footer id="footer">Site created by Cristian Robert Simion Anul I ID Grupa 108</footer>         
 </div>
 		
 </body>
