--- a/Products/Science.html
+++ b/Products/Science.html
@@ -8,13 +8,6 @@
 <body>
 <div class="title">
 <img src ="../Pictures/Logo.png"></img>
-<h1>Science books</h1>
-</div>
-<div class="search">
-	<form action="main.html/search.php">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
 </div>
 <div id='cssmenu'>
     <div class="dropdown">
@@ -40,11 +33,14 @@
             <a href="../Discounts/Technology.html">Tehnology discount</a>
         </div>
     </div>
+    <div class="dropdown">
+		<button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+	</div>
 
 </div>
 
 <div id='main' class="main body" >
-    <h1>Science</h1>
+    <h1>Science books</h1>
     <div class="carousel active">
         <ul>
             <li class="vsep">
@@ -165,3 +161,8 @@
 
         </ul>
     </div>
+    <div>        
+        <footer id="footer">Site created by Cristian Robert Simion Anul I ID Grupa 108</footer>         
+    </div>
+</body>
+</html>
