--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -8,13 +8,6 @@
 <body>
 <div class="title">
 <img src ="../Pictures/Logo.png"></img>
-<h1>Adventure books</h1>
-</div>
-<div class="search">
-	<form action="main.html/search.php">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
 </div>
 <div id='cssmenu'>
         <div class="dropdown">
@@ -40,11 +33,14 @@
                 <a href="../Discounts/Technology.html">Tehnology discount</a>
             </div>
         </div>
+        <div class="dropdown">
+            <button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+        </div>
     
 </div>
 
 <div id='main' class="main body" >
-    <h1>Adventure</h1>
+    <h1>Adventure books</h1>
     <div class="carousel active">
         <ul>
             <li class="vsep">
@@ -182,7 +178,9 @@
             
         </ul>
     </div>
-
+    <div>        
+        <footer id="footer">Site created by Cristian Robert Simion Anul I ID Grupa 108</footer>         
+    </div>
 
 </div>
 </body>
