--- a/Products/Technology.html
+++ b/Products/Technology.html
@@ -8,13 +8,6 @@
 <body>
 <div class="title">
 <img src ="../Pictures/Logo.png"></img>
-<h1>Technology books</h1>
-</div>
-<div class="search">
-	<form action="main.html/search.php">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
 </div>
 <div id='cssmenu'>
     <div class="dropdown">
@@ -40,9 +33,17 @@
             <a href="../Discounts/Technology.html">Tehnology discount</a>
         </div>
     </div>
+    <div class="dropdown">
+		<button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+	</div>
 
 </div>
-
-<div>
+<div id='main' class="main body" >
+    <h1>Technology books</h1>
     <p>This category is currently under development</p>
+</div>
+
+
+<div>        
+    <footer id="footer">Site created by Cristian Robert Simion Anul I ID Grupa 108</footer>         
 </div>
