--- a/search.html
+++ b/search.html
@@ -27,13 +27,14 @@ Hints:
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-	<title>Example search page for Zoom Search Engine (JavaScript version)</title>
+	<title>Search BookSite</title>
 	<script language="JavaScript" src="settings.js"></script>
 	<script language="JavaScript" src="search.js"></script>
+	<link rel="stylesheet" href="main.css">
 	<!-- You can change the fonts, text colors, and styles of your search results with the CSS below -->
 	<style type="text/css">
 		.highlight { background: #FFFF40; }
-		.searchheading { font-size: 130%; font-weight: bold; }
+		.searchheading { font-size: 130%; font-weight: bold; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 		.summary { font-size: 80%; font-style: italic; }
 		.suggestion { font-size: 100%; }
 		.results { font-size: 100%; }
@@ -45,9 +46,9 @@ Hints:
 		.context { font-size: 100%; }
 		.infoline { font-size: 80%; font-style: normal; color: #808080;}
 
-		.zoom_searchform { font-size: 100%; }
-		.zoom_results_per_page { font-size: 80%; margin-left: 10px; }
-		.zoom_match { font-size: 80%; margin-left: 10px;}				
+		.zoom_searchform { font-size: 100%; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+		.zoom_results_per_page { font-size: 80%; margin-left: 10px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+		.zoom_match { font-size: 80%; margin-left: 10px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}				
 		.zoom_categories { font-size: 80%; }
 		.zoom_categories ul { display: inline; margin: 0px; padding: 0px;}
 		.zoom_categories li { display: inline; margin-left: 15px; list-style-type: none; }
@@ -88,8 +89,40 @@ Hints:
 </head>
 
 <body onload="if (document.getElementById('zoom_searchbox')) {document.getElementById('zoom_searchbox').focus();}">
-	<h1>Search this site</h1>
-	<p>
+	<div class="title">
+		<img src ="Pictures/Logo.png"></img>
+		</div>
+		<div id='cssmenu'>
+				<div class="dropdown">
+						<button class='dropbtn'><a href='index.html'>Home</a></button>
+				</div>        
+				<div class="dropdown">             
+					<button class='dropbtn'>Products</button>
+					<div class="dropdown-content">            
+						<a href='Products/Fiction.html'>Fiction</a>
+						<a href="Products/Adventure.html">Adventure</a>
+						<a href="Products/Children.html">Children's books</a>
+						<a href="Products/Science.html">Science</a>
+						<a href="Products/Technology.html">Tehnology</a>            
+					</div>
+				</div>
+				<div class="dropdown">
+					<button class='dropbtn'>Discounts</button>
+					<div class="dropdown-content">                
+						<a href="Discounts/Fiction.html">Fiction discount</a>
+						<a href="Discounts/Adventure.html">Adventure discount</a>
+						<a href="Discounts/Children.html">Children discount</a>
+						<a href="Discounts/Science.html">Science discount</a>
+						<a href="Discounts/Technology.html">Tehnology discount</a>
+					</div>
+				</div>
+				<div class="dropdown">
+					<button class='dropbtn'><a href='../search.html'>Search this site</a></button>
+				</div>
+			
+		</div>
+	<h1 class="title">Search this site</h1>
+	<p id="description">
 	Enter one or more keywords to search for using the Zoom Search Engine.<br />
 	Note that '*' and '?' wildcards are supported.
 	</p>
